# neurocache

./: .env.sample  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.yml
.claude/: settings.local.json
ai-chatbot/: README.md  package.json  pnpm-lock.yaml
backend/: Dockerfile  pyproject.toml
backend/scripts/: create-db-revision-aws.sh  create-db-revision-docker.sh  downgrade-db-revision-aws.sh  downgrade-db-revision-docker.sh  migrate-aws.sh  migrate-docker.sh  run_hosted.sh  run_local.sh
backend/src/neurocache/: alembic.ini  app.py
backend/src/neurocache/agents/: book_analysis_agent.py  chat_agent.py  deps.py  extraction_agent.py  hooks.py  shared.py
backend/src/neurocache/agents/capabilities/: knowledge_base.py
backend/src/neurocache/agents/tools/: knowledge_base_tools.py
backend/src/neurocache/core/: config.py
backend/src/neurocache/dependencies/: db.py  openai.py
backend/src/neurocache/dependencies/auth/: auth.py  custom_exceptions.py
backend/src/neurocache/mcp/: __main__.py  deps.py  server.py
backend/src/neurocache/migrations/: env.py
backend/src/neurocache/migrations/versions/: 22a499764c49_change_knowledge_source_id_to_uuid.py  2b387e107ed3_add_is_activated_to_users.py  2e31d71c7a02_add_content_type_to_documents.py  7b83b5e60360_add_pgvector_extension.py  a1910db1ca87_initial_migration.py  a76a94f86085_add_user_personalization_fields.py  b334686433df_add_age_of_first_reuben_field.py  d4bb291acb34_add_document_and_document_chunks_tables.py  ea0e68d7a2fe_add_title_to_threads.py  eb905038307d_add_extractions_table.py  f998338707ad_add_search_vector_for_hybrid_full_text_.py  f99f8b81c0bc_add_knowledge_sources_table.py
backend/src/neurocache/models/: __init__.py  document.py  document_chunk.py  extraction.py  knowledge_source.py  message.py  thread.py  user.py
backend/src/neurocache/routers/: __init__.py  chat_agent.py  extraction.py  health.py  knowledge_source.py  main.py  thread.py  user.py
backend/src/neurocache/schemas/: document.py  document_chunk.py  extraction.py  knowledge_source.py  message.py  run.py  run_event.py  thread.py  thread_api.py  user.py
backend/src/neurocache/schemas/knowledge_source/: book_analysis.py  document.py  document_chunk.py  knowledge_source.py  pdf.py
backend/src/neurocache/services/: __init__.py  embedding.py  extraction.py  ingestion.py  retrieval.py  thread.py  title_generator.py
backend/src/neurocache/services/knowledge_source/: book_analysis.py  ingestion.py  knowledge_source.py  pdf_chunker.py  pdf_parser.py  retrieval.py  search_vector.py  vault_validator.py
backend/src/neurocache/utils/: logging.ini  logging.py  message_serialization.py  message_transformation.py
backend/tests/: conftest.py  test_chat_agent_hooks.py  test_message_serialization.py  test_retrieval.py
docs/: DEMO_WORKFLOWS.md  HOSTED_PRODUCT_STRATEGY.md  ROADMAP.md  claude-project-config.md  feature-brainstorm.md  mcp-brainstorm.md
frontend/: .env.example  README.md  biome.jsonc  instrumentation.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+128 files in other folders)
