[project]
name = "neurocache"
version = "0.1.0"
description = "Neurocache backend service"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.17.2",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.128.0",
  "pgvector>=0.4.0",
  "psycopg[binary,pool]>=3.3.2",
  "pydantic-ai>=1.39.0",
  "pydantic>=2.12.5",
  "python-json-logger>=4.0.0",
  "sqlalchemy[mypy]>=2.0.45",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]

[tool.pytest.ini_options]
markers = [
    "main: marks tests for main demo examples",
    "additional: marks tests for additional demo examples"
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.uv]
default-groups = ["dev"]
