[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurocache"]

[project]
name = "neurocache"
version = "0.1.0"
description = "Neurocache backend service"
readme = "../README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.136.0",
  "pgvector>=0.4.2",
  "psycopg[binary,pool]>=3.3.3",
  "pydantic-ai>=1.86.0",
  "pymupdf>=1.27.2.2",
  "pydantic>=2.13.3",
  "python-json-logger>=4.1.0",
  "sqlalchemy[asyncio,mypy]>=2.0.49",
  "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pre-commit>=4.6.0",
  "pytest>=9.0.3",
  "ruff>=0.15.11",
]

[tool.pytest.ini_options]
markers = [
    "main: marks tests for main demo examples",
    "additional: marks tests for additional demo examples"
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "pymupdf.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.uv]
default-groups = ["dev"]
